<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homebutton"
        android:title="@string/Home"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:icon="@drawable/homebtn"
        />

    <item android:id="@+id/searchbuttonnew"
        android:title="@string/search"
        android:orderInCategory="2"
        android:icon="@drawable/searchsml"
        app:showAsAction="always"

        >

    </item>

    <item
        android:id="@+id/brandreportmenu"
        android:title="@string/brandreportman"
        android:orderInCategory="3"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/overallreportmenu"
        android:title="@string/overallreportman"
        android:orderInCategory="4"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/teammanagmentmenu"
        android:title="@string/teammangment"
        android:orderInCategory="5"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/searchmanmenu"
        android:title="@string/searchmag"
        android:orderInCategory="6"
        app:showAsAction="never"
        />



    <item
        android:id="@+id/logoutbutton"
        android:title="@string/Logout"
        android:orderInCategory="8"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/downloadBtn"
        android:title="@string/Downloads"
        android:orderInCategory="7"
        app:showAsAction="never"
        />




</menu>