<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homebutton"
        android:title="@string/Home"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:icon="@drawable/homebtn"
        />

    <item android:id="@+id/searchbuttonnew"
        android:title="@string/search"
        android:orderInCategory="2"
        android:icon="@drawable/searchsml"
        app:showAsAction="always"


        >



    </item>

    <item
        android:id="@+id/eablbrand"
        android:title="@string/eablebrand"
        android:orderInCategory="3"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/eabloverall"
        android:title="@string/eableoverall"
        android:orderInCategory="4"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/eablstore"
        android:title="@string/eablestore"
        android:orderInCategory="5"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/logoutbutton"
        android:title="@string/Logout"
        android:orderInCategory="7"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/downloadBtn"
        android:title="@string/Downloads"
        android:orderInCategory="6"
        app:showAsAction="never"
        />




</menu>